<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="rgb_lighting_enable"
        android:title="@string/rgb_lighting_title"
        android:summary="@string/rgb_lighting_summary"
        android:defaultValue="true" />

    <ListPreference
        android:key="rgb_lighting_mode"
        android:title="@string/rgb_mode_title"
        android:entries="@array/rgb_mode_entries"
        android:entryValues="@array/rgb_mode_values"
        android:defaultValue="1"
        android:summary="%s"
        app:dependency="rgb_lighting_enable" />

    <ListPreference
        android:key="rgb_lighting_color"
        android:title="@string/rgb_color_title"
        android:entries="@array/rgb_color_entries"
        android:entryValues="@array/rgb_color_values"
        android:defaultValue="0"
        android:summary="%s"
        app:dependency="rgb_lighting_enable" />

    <SeekBarPreference
        android:key="rgb_lighting_brightness"
        android:title="@string/rgb_brightness_title"
        android:min="10"
        android:max="255"
        android:defaultValue="200"
        app:showSeekBarValue="true"
        app:dependency="rgb_lighting_enable" />
</PreferenceScreen>
